--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,6 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+# Enable ZMK Studio support
+CONFIG_ZMK_STUDIO=y
