Set keyboard name in the bluetooth profile

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,3 +7,6 @@
 
 # Enable ZMK Studio support
 CONFIG_ZMK_STUDIO=y
+
+# Set personal Bluetooth keyboard name
+CONFIG_ZMK_KEYBOARD_NAME="Mike's Corne"
