--- a/build.yaml
+++ b/build.yaml
@@ -21,5 +21,6 @@ include:
   - board: nice_nano_v2
     shield: corne_left
     snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME="Mike's Corne"
   - board: nice_nano_v2
     shield: corne_right
