--- a/build.yaml
+++ b/build.yaml
@@ -21,6 +21,6 @@ include:
   - board: nice_nano_v2
     shield: corne_left
     snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME="Mikes Corne"
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME="Mike_Corne"
   - board: nice_nano_v2
     shield: corne_right
