Enable USB Boot support
Per default USB boot support is disabled. Enable it so the keyboard can also be used during boot if connected via USB

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -10,3 +10,6 @@ CONFIG_ZMK_STUDIO=y
 
 # Set personal Bluetooth keyboard name
 CONFIG_ZMK_KEYBOARD_NAME="Mike's Corne"
+
+# Enable USB-Boot Support
+CONFIG_ZMK_USB_BOOT=y
