--- a/config/corne.conf
+++ b/config/corne.conf
@@ -13,3 +13,6 @@ CONFIG_ZMK_KEYBOARD_NAME="Mike's Corne"
 
 # Enable USB-Boot Support
 CONFIG_ZMK_USB_BOOT=y
+
+# Fix connection issues with company notebook
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
