Enable deep sleep support and disable zmk studio support
ZMK Studio is never being used so turn it off, also enable deep sleep support, in case the keyboard is not turned off with the on/off switch.

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,7 +6,7 @@
 # CONFIG_ZMK_DISPLAY=y
 
 # Enable ZMK Studio support
-CONFIG_ZMK_STUDIO=y
+# CONFIG_ZMK_STUDIO=y
 
 # Set personal Bluetooth keyboard name
 CONFIG_ZMK_KEYBOARD_NAME="Mike's Corne"
@@ -16,3 +16,6 @@ CONFIG_ZMK_USB_BOOT=y
 
 # Fix connection issues with company notebook
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
+# Enable Deep Sleep
+CONFIG_ZMK_SLEEP=y
