--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,4 +2,5 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
+    runs-on: ubuntu-latest
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@v0.3
