--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,4 +3,4 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   build:
     runs-on: ubuntu-latest
-    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@v0.3
+    uses: https://github.com/zmkfirmware/zmk/.github/workflows/build-user-config.yml@v0.3
